--- a/main/index.html
+++ b/main/index.html
@@ -219,7 +219,7 @@
   </tr>
 
   <tr class="blurb">
-    <td><p>Солонки и перечницы Санс и Папайрус! Они появятся в продаже в 2025 году. Эту идею подсказал"С&П"(Как Санс и Папайрус/Соль и Перец)... С точки зрения названий, это в некотором роде идеально.Everdraed. </p></td>
+    <td><p>Солонки и перечницы Санс и Папайрус! Они появятся в продаже в 2025 году. Эту идею подсказал Everdraed. </p></td>
   </tr>
 
   <tr class="blurb">
@@ -263,7 +263,7 @@
     <td><p>Как упоминалось ранее, основное содержание главы 3 было завершено некоторое время назад.</p></td>
   </tr>
   <tr class="blurb">
-    <td><p>Японский перевод главы 3 в настоящее время находится на стадии проверки. 8-4 (компания по локализации) внимательно изучает игру, чтобы определить, правильно ли все линии отображаются на японском языке. Этот процесс должен быть завершен к началу октября.</p></td>
+    <td><p>Японский перевод главы 3 в настоящее время находится на стадии проверки. 8-4 (компания по локализации) внимательно изучает игру, чтобы определить, правильно ли все диалоги отображаются на японском языке. Этот процесс должен быть завершен к началу октября.</p></td>
   </tr>
   <tr class="blurb">
     <td><p>Мы надеемся начать профессиональное тестирование версии для ПК в середине октября.</p></td>
