--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,7 @@
 <!-- Begin Bridgetown SEO tag v6.0.0 -->
 <meta property="og:title" content="ВЫПУСК 7 - Осень 2024">
 <meta property="og:locale" content="en_US">
-<meta name="description" content="Happy 9th Anniversary to UNDERTALE!">
+<meta name="description" content="С 9-летием UNDERTALE!">
 <meta property="og:description" content="Happy 9th Anniversary to UNDERTALE!">
 <link rel="canonical" href="https://toby.fangamer.com/newsletters/autumn24/">
 <meta property="og:url" content="https://toby.fangamer.com/newsletters/autumn24/">
