--- a/main/index.html
+++ b/main/index.html
@@ -88,7 +88,7 @@
 
 <table class="section" width="100%" cellpadding="0" cellspacing="0" border="0">
   <tbody><tr><td><img src="images/interview-HxethfSyBXRFIe3c.png" alt="INTERVIEW: Sans: What do you think about the number nine?" class="image-full image-header"></td></tr>
-  <tr><td><a href="https://toby.fangamer.com/interviews/nine"><img class="image-full" src="images/sans-papyus-9-HxethfSyBXRFIe3c.png" alt="Papyrus holding Sans to form the shape of a 9"></a></td></tr>
+  <tr><td><a href="../nine/index.html"><img class="image-full" src="images/sans-papyus-9-HxethfSyBXRFIe3c.png" alt="Papyrus holding Sans to form the shape of a 9"></a></td></tr>
   <tr class="blurb">
     <td><p class="text-center">
       <a href="../nine/index.html" class="link-button">ЧИТАТЬ ИНТЕРВЬЮ »</a>
@@ -335,7 +335,7 @@
     <td><p>Поскольку прошло много времени с момента выхода главы 2, позвольте мне поделиться некоторыми материалами из ее разработки! Надеюсь, вам понравится!</p></td>
   </tr>
   <tr class="blurb">
-    <td><p class="text-center" style="margin-bottom: 40px"><a href="https://toby.fangamer.com/interviews/chapter2_concept"><img width="100%" src="images/conceptart-HxethfSyBXRFIe3c.png" alt="UNSEEN CHAPTER 2 CONCEPT ART"></a></p></td>
+    <td><p class="text-center" style="margin-bottom: 40px"><a href="../arts/index.html"><img width="100%" src="images/conceptart-HxethfSyBXRFIe3c.png" alt="UNSEEN CHAPTER 2 CONCEPT ART"></a></p></td>
   </tr>
   <tr class="blurb">
     <td><p class="text-center">
@@ -343,7 +343,7 @@
     </p></td>
   </tr>
   <tr class="blurb">
-    <td><p class="text-center" style="margin-bottom: 40px"><a href="https://toby.fangamer.com/interviews/chapter2_music"><img width="100%" src="images/music-HxethfSyBXRFIe3c.png" alt="UNUSED CHAPTER 2 MUSIC"></a></p></td>
+    <td><p class="text-center" style="margin-bottom: 40px"><a href="../music/index.html"><img width="100%" src="images/music-HxethfSyBXRFIe3c.png" alt="UNUSED CHAPTER 2 MUSIC"></a></p></td>
   </tr>
   <tr class="blurb">
     <td><p class="text-center">
