--- a/main/index.html
+++ b/main/index.html
@@ -175,7 +175,7 @@
     <td><p>Некоторые части прозрачны, поэтому разные жидкости окрашивают его глаз разными цветами!</p></td>
   </tr>
   <tr class="blurb">
-    <td><p>... Если, вы нальете что-то, кроме синего лимонада, он в превратится в AU-шную версию Санса... Пожалуйста, проявите ответственность.</p></td>
+    <td><p>... Если, вы нальете что-то, кроме синего лимонада, он превратится в AU-шную версию Санса... Пожалуйста, проявите ответственность.</p></td>
   </tr>
 
   <tr class="blurb">
