--- a/arts/index.html
+++ b/arts/index.html
@@ -176,7 +176,7 @@
         <img class="mx-auto mb-4 lazyload" loading="lazy" src="images/ch2_npc_various.png">
       </a>
       <div class="flex flex-col gap-y-2 max-w-prose w-full px-2 mx-auto">
-        <p>VРазные неигровые персонажи. Большинство из них непосредственно вошли в главу..</p>
+        <p>Разные неигровые персонажи. Большинство из них непосредственно вошли в главу..</p>
 
         <p class="mt-4">Дизайны Эддисонов были созданы по аналогии со Спамтоном. Так что в итоге внутриигровые версии выглядят ещё более похожими, чем концепт-арты.</p>
 
