--- a/arts/index.html
+++ b/arts/index.html
@@ -302,7 +302,7 @@
         <img class="mx-auto mb-4 lazyload" loading="lazy" src="images/08antivirus.png">
       </a>
       <div class="flex flex-col gap-y-2 max-w-prose w-full px-2 mx-auto">
-        <p class="text-teal-500 flex gap-x-2"><span>16:</span><span>Анти Вирус, это полицейский это, или всё же доктор? Может он относится к тебе как к врагу потому что ты «не местный»?</span></p>
+        <p class="text-teal-500 flex gap-x-2"><span>16:</span><span>Анти Вирус, это полицейский или всё же доктор? Может он относится к тебе как к врагу потому что ты «не местный»?</span></p>
         <p class="text-teal-500 flex gap-x-2"><span>17:</span><span>Повреждённые данные или типа того</span></p>
       </div>
     </div>
